--- a/app/src/main/res/layout/fragment_layout.xml
+++ b/app/src/main/res/layout/fragment_layout.xml
@@ -39,7 +39,7 @@
             android:layout_height="30dp"
             android:layout_centerVertical="true"
             android:layout_marginRight="15dp"
-            android:src="@drawable/rus" />
+            android:background="@drawable/rus" />
 
         <com.firsset.vocabularyenru.InstantAutoComplete
             android:id="@+id/descriptionAutoCompleteTextView"
