--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -30,9 +30,10 @@
         android:layout_height="match_parent"
         android:layout_margin="15dp"
         android:hint="@string/voc_edit_text"
-        android:inputType="textCapSentences"
         android:paddingBottom="20dp"
         android:textSize="16sp"
+        android:lines="7"
+        android:singleLine="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/wordEditText"
