--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -4,23 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="2dp"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="2dp">
-
-    <TextView
-        android:id="@+id/letterListItem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:paddingStart="10dp"
-        android:textAlignment="viewStart"
-        />
 
     <TextView
         android:id="@+id/wordListItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
+        android:padding="1dp"
+        android:textStyle="bold"
         android:textAlignment="viewStart"
         />
 
@@ -28,7 +20,6 @@
         android:id="@+id/vocListItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="5"
         android:textAlignment="viewStart"
 
          />
